--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -1,1 +1,9 @@
-@import '~bootstrap/scss/bootstrap.scss';
+@import "~bootstrap/scss/bootstrap.scss";
+
+html,
+body,
+#root,
+.App {
+  height: 100%;
+  width: 100%;
+}
